force-app/main/default/objects/Program_Template__c/Program_Template__c.object-meta.xml
<CustomObject>
    <description>Overall NYSERDA program template listing.  This template will be used for project level activities.</description>
    <label>Program Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>