force-app/main/default/objects/Program_Template__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Any details about this specific template.</description>
    <inlineHelpText>Any details about this specific template.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>