force-app/main/default/objects/Program_Template__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <description>Template associated with this program.</description>
    <inlineHelpText>Template associated with this program. Make sure this Program matches the Program field on the Solicitation.</inlineHelpText>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Program Templates</relationshipLabel>
    <relationshipName>Program_Templates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>