force-app/main/default/objects/Program_Template__c/fields/Solicitation__c.field-meta.xml
<CustomField>
    <fullName>Solicitation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solicitation</label>
    <referenceTo>Grant_Solicitation__c</referenceTo>
    <relationshipLabel>Program Templates</relationshipLabel>
    <relationshipName>Program_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>