force-app/main/default/objects/Program_Template__c/fields/Template_Type__c.field-meta.xml
<CustomField>
    <fullName>Template_Type__c</fullName>
    <description>Each program may have multiple types of process.</description>
    <inlineHelpText>Each program may have multiple types of process.</inlineHelpText>
    <label>Template Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Application Intake</fullName>
            </value>
            <value>
                <fullName>Change Modification Application</fullName>
            </value>
            <value>
                <fullName>Contractor Application</fullName>
            </value>
            <value>
                <fullName>Payee Application</fullName>
            </value>
            <value>
                <fullName>Proposal Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>